[tool.poetry]
name = "cpet"
version = "0.1.0"
description = ""
authors = ["Aaron Fletcher <afletcher53@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
tqdm = "^4.66.4"
openpyxl = "^3.1.5"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
