[tool.poetry]
name = "cpet"
version = "0.1.0"
description = ""
authors = ["Aaron Fletcher <afletcher53@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
tqdm = "^4.66.4"
openpyxl = "^3.1.5"
ipykernel = "^6.29.5"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
torch = "^2.4.0"
torchvision = "^0.19.0"
torchaudio = "^2.4.0"
wandb = "^0.17.8"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
